ghc/compiler/tests/typecheck/should_fail/tcfail055.hs
module ShouldFail where

f x = (x + 1 :: Int) :: Float
